add jcenter back

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        mavenCentral()
+        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 
