--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NoActionBar">
-        <activity android:name=".QuizActivity"></activity>
+        <activity android:name=".ResultActivity"></activity>
+        <activity android:name=".QuizActivity" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
