--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,24 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NoActionBar">
         <activity
-            android:name=".ui.settings.SettingsActivity"
-            android:screenOrientation="portrait" />
+            android:name=".ui.settings.SettingsActivity" />
         <activity
-            android:name=".ui.categories.CategoriesActivity"
-            android:screenOrientation="portrait" />
+            android:name=".ui.categories.CategoriesActivity" />
         <activity
-            android:name=".ui.results.ResultsActivity"
-            android:screenOrientation="portrait" />
+            android:name=".ui.results.ResultsActivity" />
         <activity
-            android:name=".ui.quizResult.QuizResultActivity"
-            android:screenOrientation="portrait" />
+            android:name=".ui.quizResult.QuizResultActivity" />
         <activity
-            android:name=".ui.quiz.QuizActivity"
-            android:screenOrientation="portrait" />
+            android:name=".ui.quiz.QuizActivity" />
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
