Fixed the adaptation of layouts for different screens. Fixed names in resources.
Added the ability to reset completed questions.

Added the display of full-screen ads after each 3 passed the test.

Due to the addition of new issues, migration has been added and the database file has been updated.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NoActionBar">
-        <activity
-            android:name=".ui.settings.SettingsActivity" />
-        <activity
-            android:name=".ui.categories.CategoriesActivity" />
-        <activity
-            android:name=".ui.results.ResultsActivity" />
-        <activity
-            android:name=".ui.quizResult.QuizResultActivity" />
-        <activity
-            android:name=".ui.quiz.QuizActivity" />
+        <activity android:name=".ui.settings.SettingsActivity" />
+        <activity android:name=".ui.categories.CategoriesActivity" />
+        <activity android:name=".ui.results.ResultsActivity" />
+        <activity android:name=".ui.quizResult.QuizResultActivity" />
+        <activity android:name=".ui.quiz.QuizActivity" />
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true"
