– Added English language support (no text questions). Russian is reserved for regions where the number of downloads was more than 10. – Added new questions – Migrations are moved to separate files – Added screen with creators and licenses

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NoActionBar">
+        <activity android:name=".ui.settings.creatorsLicenses.CreatorsLicenses" />
         <activity android:name=".ui.settings.SettingsActivity" />
         <activity android:name=".ui.categories.CategoriesActivity" />
         <activity android:name=".ui.results.ResultsActivity" />
